--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@remixicon/react": "^4.2.0",
     "bcryptjs": "^2.4.3",
     "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
